css: Fix footer layout on Firefox on macOS

--- a/assets/custom.scss
+++ b/assets/custom.scss
@@ -1,12 +1,22 @@
 ---
 ---
 
+.footer-col-2 {
+  width: calc(25% - (30px / 2));
+}
+
 .footer-col-3 {
+  width: calc(40% - (30px / 2));
   text-align: right;
 }
 
 @media screen and (max-width: 800px) {
+  .footer-col-2 {
+    width: calc(50% - (30px / 2));
+  }
+
   .footer-col-3 {
+    width: calc(100% - (30px / 2));
     text-align: left;
   }
 }
